src/tests/snapshots/nyx__tests__window_opening__check_target_size@ofT-dwF1000-dhF500-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1272 × 712, states: []

post-map configures:
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen]
size: 1280 × 720, bounds: 1272 × 712, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1272 × 712, states: [Activated]
